added all sections, footer, expect last animation of the footer

--- a/index.html
+++ b/index.html
@@ -68,19 +68,57 @@
         </section>
         <section class="goldenbear">
             <article class="headlinebox">
-                <p>0001</p>
+                <p>001</p>
                 <h2>The Golden Bear</h2>
+                <img class="bearimg1" src="./assets/img/goldenbear.png" alt="">
             </article>
             <article class="contentbox">
                 <div class="testimonial">
                     This design is all about the resilience of California to overcome difficult situations and come out stronger than before. It’s a flip of the UNC Tarheel mascot with added elements like the California poppy.
                 </div>
                 <p>– Kevin Lam, Artist</p>
+                <img class="bearimg2" src="./assets/img/gb2.png" alt="">
+            </article>
+        </section>
+        <section class="poppybear">
+            <img src="./assets/img/cc-circle-2.png" alt="" class="circleanimation">
+            <article class="headlinebox">
+                <p>002</p>
+                <h2>The Poppy Bear</h2>
+                <img class="bearimg3" src="./assets/img/pb3.png" alt="">
+            </article>
+            <article class="contentbox">
+                <div class="testimonial">
+                    This design is inspired by the quote ‘grow through what you go through’ and represents the strength of Californians and how we will continue to thrive, regardless of what knocks us down. 
+                </div>
+                <p>– Alyssa Wigant, Artist</p>
+                <img class="bearimg4" src="./assets/img/rosebear.png" alt="">
             </article>
         </section>
     </main>
     <footer>
-
+        <section class="cta">
+            <p>Join us</p>
+            <article class="footertxt">
+                Mark your calendar for our SF Design Week Studio Crawl. In addition to custom swag, we’ll also have a DJ, a mixologist, and other cool surprises we can’t tell you about yet.
+            </article>
+            <a href="">RSVP</a>
+        </section>
+        <section class="footerrow">
+            <div class="leftbox">
+                <div class="socialmediaicons">
+                    <a href=""><img src="./assets/img/fb.png" alt=""></a>
+                    <a href=""><img src="./assets/img/ig.png" alt=""></a>
+                    <a href=""><img src="./assets/img/li.png" alt=""></a>
+            </div>
+            <p>A SF Design Week project</p>
+            <p>2019</p>
+            </div>
+            <div class="rightbox">
+                <img src="./assets/img/sfdw-logo.png" alt="">
+                <img src="./assets/img/ngo-logo.png" alt="">
+            </div>
+        </section>
     </footer>
 </body>
 </html>
