add responsive layout for tablets

--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
             </article>
             <article class="contentbox">
                 <div class="testimonial">
+                    <p>
                     This design is all about the resilience of California to overcome difficult situations and come out stronger than before. It’s a flip of the UNC Tarheel mascot with added elements like the California poppy.
+                    </p>
                 </div>
                 <p>– Kevin Lam, Artist</p>
                 <img class="bearimg2" src="./assets/img/gb2.png" alt="">
@@ -89,7 +91,9 @@
             </article>
             <article class="contentbox">
                 <div class="testimonial">
-                    This design is inspired by the quote ‘grow through what you go through’ and represents the strength of Californians and how we will continue to thrive, regardless of what knocks us down. 
+                    <p>
+                        This design is inspired by the quote ‘grow through what you go through’ and represents the strength of Californians and how we will continue to thrive, regardless of what knocks us down. 
+                    </p>
                 </div>
                 <p>– Alyssa Wigant, Artist</p>
                 <img class="bearimg4" src="./assets/img/rosebear.png" alt="">
@@ -97,12 +101,22 @@
         </section>
     </main>
     <footer>
-        <section class="cta">
-            <p>Join us</p>
-            <article class="footertxt">
-                Mark your calendar for our SF Design Week Studio Crawl. In addition to custom swag, we’ll also have a DJ, a mixologist, and other cool surprises we can’t tell you about yet.
-            </article>
-            <a href="">RSVP</a>
+        <section class="footercontent">
+            <section class="cta">
+                <p class="join" >Join us</p>
+                <article class="footertxt">
+                    <p>
+                        Mark your calendar for our SF Design Week Studio Crawl. In addition to custom swag, we’ll also have a DJ, a mixologist, and other cool surprises we can’t tell you about yet.
+                    </p>
+                </article>
+                <a href="">RSVP</a>
+            </section>
+            <div class="footerbanner">
+                <h2> 
+                    <span>2019</span> JUNE 21, <span>2019</span> JUNE 21, </span>
+                    <span>2019</span> JUNE 21, <span>2019</span> JUNE 21, </span>
+                    <span>2019</span> JUNE 21, <span>2019</span> JUNE 21, </span></h2>
+            </div>
         </section>
         <section class="footerrow">
             <div class="leftbox">
